[gd_scene load_steps=2 format=3 uid="uid://cbi57cveff60"]

[ext_resource type="Script" path="res://modules/indian_leaf_fish/indian_leaf_fish.gd" id="1_2538k"]

[node name="IndianLeafFish" type="Node2D"]
script = ExtResource("1_2538k")

[node name="Scene" type="Node2D" parent="."]

[node name="Builder" type="Window" parent="."]
title = "Indian Leaf Fish"
initial_position = 1
size = Vector2i(300, 200)
visible = false
unresizable = true
metadata/_edit_use_anchors_ = true

[node name="ScaleMinLabel" type="Label" parent="Builder"]
offset_right = 131.0
offset_bottom = 26.0
text = "Min Scale"
metadata/_edit_use_anchors_ = true

[node name="ScaleMaxLabel" type="Label" parent="Builder"]
offset_top = 30.0
offset_right = 131.0
offset_bottom = 56.0
text = "Max Scale"
metadata/_edit_use_anchors_ = true

[node name="ScaleStepLabel" type="Label" parent="Builder"]
offset_top = 60.0
offset_right = 131.0
offset_bottom = 86.0
text = "Increment speed"
metadata/_edit_use_anchors_ = true

[node name="SpeedLabel" type="Label" parent="Builder"]
offset_top = 86.0
offset_right = 48.0
offset_bottom = 112.0
text = "Speed"

[node name="ScaleMin" type="HSlider" parent="Builder"]
custom_minimum_size = Vector2(100, 0)
offset_left = 144.0
offset_right = 244.0
offset_bottom = 24.0
max_value = 5.0
step = 0.1
value = 1.0
metadata/_edit_use_anchors_ = true

[node name="ScaleMax" type="HSlider" parent="Builder"]
offset_left = 144.0
offset_top = 30.0
offset_right = 244.0
offset_bottom = 54.0
max_value = 5.0
step = 0.1
value = 2.0
metadata/_edit_use_anchors_ = true

[node name="ScaleStep" type="HSlider" parent="Builder"]
offset_left = 144.0
offset_top = 64.0
offset_right = 244.0
offset_bottom = 86.0
max_value = 1.0
step = 0.1
value = 0.2
metadata/_edit_use_anchors_ = true

[node name="Speed" type="HSlider" parent="Builder"]
offset_left = 144.0
offset_top = 96.0
offset_right = 244.0
offset_bottom = 120.0
max_value = 500.0
value = 200.0

[node name="Apply" type="Button" parent="Builder"]
anchors_preset = -1
anchor_top = 0.213333
anchor_bottom = 0.213333
offset_top = 88.0
offset_right = 52.0
offset_bottom = 119.0
text = "Apply"
metadata/_edit_use_anchors_ = true

[connection signal="close_requested" from="Builder" to="." method="_on_builder_close_requested"]
[connection signal="pressed" from="Builder/Apply" to="." method="_on_apply_pressed"]
